--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 frontend/node_modules
 backend/node_modules
 backend/venv
-
+backend/depression-detection/data/
 
 # Build and Release Folders
 bin-debug/
